--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@types/uuid": "^8.3.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
+  },
+  "scripts": {
+    "dev": "ts-node-dev --transpile-only --ignore-watch nome_modules src/server.ts"
   }
 }
